--- a/templates/create_campaign.html
+++ b/templates/create_campaign.html
@@ -30,11 +30,11 @@
             <div class="collapse navbar-collapse justify-content-center" id="navbarCenteredExample">
                 <!-- Left links -->
                 <ul class="navbar-nav mb-2 mb-lg-0">
-                    <li class="nav-item active navl">
+                    <li class="nav-item  navl">
                         <a class="nav-link" href="/">Explore</span>
                         </a>
                     </li>
-                    <li class="nav-item  navl">
+                    <li class="nav-item  active navl">
                         <a class="nav-link" href="/campaigns">Subscribe</a>
                     </li>
                 </ul>
@@ -42,8 +42,8 @@
             </div>
             <div class="justify-content-end">
                 <!-- Right links -->
-                <button type="button" class="btn btn-outline-primary"><a style="text-decoration: none;"
-                        href="/logout">Logout</a></button>
+                <a href="/logout"><button type="button" class="btn btn-outline-primary">Logout</button>
+                </a>
                 <!-- Left links -->
             </div>
             <!-- Collapsible wrapper -->
