--- a/templates/register.html
+++ b/templates/register.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -13,8 +14,8 @@
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
     <title>Register</title>
-    <link rel="stylesheet" href="/static/css/main.css">
-    <link rel="stylesheet" href="/static/css/temp.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
+    <link rel="stylesheet" href="/static/css/bootstrap.css">
 </head>
 
 <body>
@@ -44,11 +45,12 @@
                                 <form method="POST" action="">
                                     <div class="mt-3">
                                         {% csrf_token %}
-                                        {{register_form.as_p}}
+                                        {% for field in register_form %}
                                         <div class="form-group">
                                             <p class="mt-3">{{ field.label }}</p>
                                             {{ field }}
                                         </div>
+                                        {% endfor %}
                                     </div>
 
                                     <button class="btn-lg log mt-3" type="submit">Register</button>
