--- a/templates/about.html
+++ b/templates/about.html
@@ -29,7 +29,8 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <div class="collapse navbar-collapse" style="display: flex; justify-content: flex-end;"
+                    id="navbarSupportedContent">
                     <div class="form-inline">
                         <a href="about" style="font-weight: bold;text-decoration: none" class="login mr-4">ABOUT</a>
                         <a href="login" style="font-weight: bold;text-decoration: none;" class="login mr-4">LOGIN</a>
@@ -48,6 +49,36 @@
                 <div class="row align-items-center py-md-5 py-3">
                     <div class="col-md-5 content-left pt-md-0 pt-5">
                         <h1 style="font-weight: 900;">About</h1>
+                    </div>
+                    <div style="width: 90%;max-width:1200px;margin: 0 auto;">
+                        <p style="font-size: 25px;font-family: Baikal, Inter, sans-serif;">
+                            <br><br><br>Welcome to StartApp, a startup funding website designed to help entrepreneurs
+                            and businesses grow and succeed. Our platform provides a range of resources and services
+                            that can help you secure the funding you need to take your business to the next level.
+
+                            <br><br>At StartApp, we understand the challenges that entrepreneurs and small business
+                            owners face when it comes to securing funding. That's why we've developed a comprehensive
+                            platform that connects entrepreneurs with investors, providing them with the tools and
+                            resources they need to succeed.
+
+                            <br><br>Our platform includes a range of features, including a powerful search engine that
+                            helps entrepreneurs find investors that are interested in their business.
+
+                            <br><br>We work with a network of experienced investors who are looking for innovative
+                            businesses and ideas to invest in. By connecting with these investors through our platform,
+                            entrepreneurs can secure the funding they need to grow their businesses and achieve their
+                            goals.
+
+                            <br><br>At StartApp, we are committed to helping entrepreneurs and small business owners
+                            succeed. Whether you're just starting out or looking to take your business to the next
+                            level, our platform can help you achieve your goals. So why wait? Sign up today and start
+                            connecting with investors who can help take your business to the next level.
+
+
+
+
+
+                        </p>
                     </div>
 
                 </div>
