--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@
     <!-- //web fonts -->
     <!-- Template CSS -->
     <link rel="stylesheet" href="/static/css/bootstrap.css">
-    <title>Document</title>
+    <title>Startapp-Invest Securely</title>
 </head>
 
 <body>
