--- a/templates/invest.html
+++ b/templates/invest.html
@@ -12,7 +12,7 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
-    <title>Document</title>
+    <title>Startapp-Invest Securely</title>
 </head>
 
 <body>
@@ -29,7 +29,7 @@
             </button>
             <div class="collapse navbar-collapse justify-content-center" id="navbarCenteredExample">
                 <!-- Left links -->
-                <ul class="navbar-nav mb-2 mb-lg-0">
+                <ul class="navbar-nav mb-2 mb-lg-0" style="padding-right: 11rem;">
                     <li class="nav-item active navl">
                         <a class="nav-link" href="/">Explore</span>
                         </a>
