--- a/templates/register.html
+++ b/templates/register.html
@@ -12,8 +12,8 @@
         crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-
-    <title>Register</title>
+    <link rel="icon" href="https://thumbs.dreamstime.com/z/print-144596264.jpg" type="image/x-icon">
+    <title>Startapp-Invest Securely</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
     <link rel="stylesheet" href="/static/css/bootstrap.css">
 </head>
