--- a/templates/campaign_detail.html
+++ b/templates/campaign_detail.html
@@ -138,7 +138,7 @@
     <script>
         var progressBar = document.getElementById("progress-bar");
         var goal = document.getElementById("goal")
-        var progressValue = {{ cur }};
+        var progressValue = {{ cur }}
         if (progressValue >= 100) {
             goal.style.color = "rgb(9, 149, 48)";
             progressBar.style.backgroundColor = "rgb(9, 149, 48)";
@@ -160,7 +160,7 @@
                     <div class="footer-top-28">
                         <div class="footer-list-28 mt-3">
                             <div class="container" style="width: 90%;max-width:900px;margin: 0 auto;">
-                                <p class="copy-footer-28 text-center"> &copy; 2020 Market. All Rights Reserved. Design
+                                <p class="copy-footer-28 text-center"> &copy; 2022 Market. All Rights Reserved. Design
                                     by <a href="#">StartApp</a></p>
                             </div>
                         </div>
