--- a/static/css/main.css
+++ b/static/css/main.css
@@ -8,7 +8,7 @@
 .navbar-light .navbar-nav .nav-link.show,
 .navbar-light .navbar-nav .show>.nav-link {
     color: rgba(15, 76, 217, 0.9);
-    font-weight: 700;
+    font-weight: 500;
 }
 
 .navbar-brand {
@@ -210,6 +210,15 @@ hr {
     transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
     font-size: inherit;
     color: inherit;
+}
+
+.alert-danger {
+    display: none;
+}
+
+.alert-danger.d-block {
+    display: block;
+    margin-top: 10px;
 }
 
 .card-img-top {
