--- a/templates/invest.html
+++ b/templates/invest.html
@@ -11,6 +11,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.js"
+        integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
     <title>Startapp-Invest Securely</title>
 </head>
@@ -51,19 +53,34 @@
         <!-- Container wrapper -->
     </nav>
     <div class="container invmain">
+        <div class="" role="alert">
+            <!-- This is a danger alert—check it out! -->
+        </div>
         <h1 class="css-wdj2vc">Subscribe to {{ campaign.name }}</h1>
 
-        <form method="post" action="{% url 'payment' campaign.id %}">
+        <form method="post" id="payment-form" action="{% url 'payment' campaign.id %}">
             {% csrf_token %}
             <label for="amount">Amount</label><br>
             <div class="input-group mb-3 mt-2">
                 <input name="amount" id="amount" placeholder="₹5000 Minimum" class="form-control"
                     aria-label="Amount (to the nearest dollar)">
-
             </div>
             <button type="submit" class="btn btn-primary btn-lg css-nwsp77">Pay</button>
         </form>
     </div>
+    <script>
+        var form = document.getElementById('payment-form');
+        var amountField = document.getElementById('amount');
+        var dangerAlert = document.querySelector('.alert-danger');
+        form.addEventListener('submit', function (event) {
+            if (amountField.value < 5000) {
+                event.preventDefault();
+                amountField.classList.add('is-invalid');
+                dangerAlert.classList.add('alert');
+                dangerAlert.classList.add('d-block');
+            }
+        })
+    </script>
 </body>
 
 </html>
